cargo-features = ["per-package-target"]

[package]
name = "keyboard-rp2040"
version = "0.0.0"
edition = "2024"

default-target = "thumbv6m-none-eabi"

[features]
default = ["defmt"]

defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-executor/defmt",
    "embassy-rp/defmt",
    "embassy-time/defmt",
    "lokey/defmt",
    "lokey-blink/defmt",
    "lokey-keyboard/defmt",
    "lokey-layer/defmt",
    "lokey-rp/defmt",
    "lokey-usb/defmt",
    "panic-probe/print-defmt",
]

[dependencies]
cortex-m-rt = "0.7.0"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = "0.9.0"
embassy-time = "0.5.0"
lokey = { path = "../../lokey", features = ["internal-receiver-slots-8", "external-receiver-slots-8", "external-observer-slots-8"] }
lokey-blink = { path = "../lokey-blink" }
lokey-keyboard = { path = "../../lokey-keyboard", features = ["usb"] }
lokey-layer = { path = "../../lokey-layer" }
lokey-rp = { path = "../../lokey-rp", features = ["usb", "rp2040"] }
lokey-usb = { path = "../../lokey-usb" }
panic-probe = "1.0.0"
typenum = "1.19.0"
