cargo-features = ["per-package-target"]

[package]
name = "keyboard_nrf52840"
version = "0.0.0"
edition = "2024"

default-target = "thumbv7em-none-eabihf"

[features]
default = ["defmt"]

defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-executor/defmt",
    "embassy-nrf/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "lokey/defmt",
    "lokey_ble/defmt",
    "lokey_blink/defmt",
    "lokey_keyboard/defmt",
    "lokey_layer/defmt",
    "lokey_led_array/defmt",
    "lokey_nrf/defmt",
    "lokey_usb/defmt",
    "lokey_usb_ble/defmt",
    "panic-probe/print-defmt",
]

[dependencies]
cortex-m-rt = "0.7.0"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "nightly"] }
embassy-nrf = { version = "0.9.0", features = ["nrf52840"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
lokey = { path = "../../lokey", features = ["internal-receiver-slots-8", "external-receiver-slots-8", "external-observer-slots-8"] }
lokey_ble = { path = "../../lokey_ble" }
lokey_blink = { path = "../lokey_blink" }
lokey_keyboard = { path = "../../lokey_keyboard", features = ["usb", "ble"] }
lokey_layer = { path = "../../lokey_layer" }
lokey_led_array = { path = "../../lokey_led_array", features = ["ble", "nrf52840"] }
lokey_nrf = { path = "../../lokey_nrf", features = ["nrf52840", "usb", "ble"] }
lokey_usb = { path = "../../lokey_usb" }
lokey_usb_ble = { path = "../../lokey_usb_ble" }
panic-probe = "1.0.0"
typenum = { version = "1.19.0", features = ["const-generics"] }
