cargo-features = ["per-package-target"]

[package]
name = "keyboard_rp2040"
version = "0.0.0"
edition = "2024"

default-target = "thumbv6m-none-eabi"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "lokey/defmt",
    "lokey_layer/defmt",
    "lokey_keyboard/defmt",
    "panic-probe/print-defmt",
]

[dependencies]
cortex-m-rt = "0.7.0"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "nightly"] }
embassy-rp = "0.8.0"
embassy-time = "0.5.0"
lokey = { path = "../../lokey" }
lokey_blink = { path = "../lokey_blink" }
lokey_keyboard = { path = "../../lokey_keyboard", features = ["external-usb"] }
lokey_layer = { path = "../../lokey_layer" }
lokey_rp = { path = "../../lokey_rp", features = ["usb", "rp2040"] }
lokey_usb = { path = "../../lokey_usb" }
panic-probe = "1.0.0"
switch-hal = { git = "https://github.com/daniel-dbg-ginsburg/switch-hal", branch = "hal-update", features = ["async"] }
typenum = "1.19.0"
